HelpingHandsProject/force-app/main/default/objects/Volunteer_Task__c/Volunteer_Task__c.object-meta.xml
<CustomObject>
    <label>Volunteer Task</label>
    <nameField>
        <label>Volunteer Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>