HelpingHandsProject/force-app/main/default/objects/Volunteer_Task__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>What is the due date for this task?</description>
    <label>Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>