HelpingHandsProject/force-app/main/default/objects/Volunteer_Task__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Under which event the task was conducted</description>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Volunteer Tasks</relationshipLabel>
    <relationshipName>Volunteer_Tasks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>