HelpingHandsProject/force-app/main/default/objects/Volunteer_Task__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>who was the volunteer for this task</description>
    <label>Volunteer</label>
    <referenceTo>Volunteer__c</referenceTo>
    <relationshipLabel>Volunteer Tasks</relationshipLabel>
    <relationshipName>Volunteer_Tasks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>